--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,11 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies with increased timeout and retries
-RUN npm config set fetch-timeout 600000 && \
-    npm config set fetch-retries 5 && \
-    npm config set fetch-retry-mintimeout 20000 && \
-    npm config set fetch-retry-maxtimeout 120000 && \
-    npm install --no-audit --no-fund
+RUN npm install --no-audit --no-fund
 
 # Copy application code
 COPY . .
