fix: add package-lock.json files for CI/CD npm ci command

--- a/backend/order-service/.gitignore
+++ b/backend/order-service/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+# Note: package-lock.json should be committed for CI/CD
 
 # Environment variables
 .env
